pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pankaj-pod
  labels:
    app: pankaj-pod-label
spec:
  containers:
    - name: redis-container
      image: nginx
      ports:
        - containerPort: 80
